# Coursework

./: CMakeLists.txt  README.md
code/: io.c  io.h  main.c  waveform.c  waveform.h
